--- a/frontend/owcompare/src/css/style.styl
+++ b/frontend/owcompare/src/css/style.styl
@@ -1,9 +1,7 @@
-@import 'nib'
+@require './_*.styl'
 
-global-reset()
-
-
-maxwidth = 600px
+maxwidth = 100vw
+maxheight = 100vh
 search-bar-height = 35px
 search-width = 350px
 
@@ -12,26 +10,27 @@ centered(selfSize)
 
 body
   box-sizing border-box
-  width 100%
-  height 100%
+  width maxwidth
+  height maxheight
   main
     max-width maxwidth
-    margin 10px auto
+    // margin 0.5vh auto
+    position relative
     .flex-container
       display flex
       flex-wrap wrap
       max-width maxwidth
-      min-height 500px
+      height round(maxheight/3)
       background red
       justify-content flex-start
 
     .flex-item
-      flex-basis 200px
+      flex-basis (maxwidth / 3)
       flex-grow 0
       position relative
       //padding 2px
       background yellow
-      max-height: 250px
+      height 50%
 
       .hero-img
         height 100%
@@ -44,6 +43,7 @@ body
 
     .search-wrapper
       position relative
+      z-index: 999
       .search
         position absolute
         width 100%
@@ -65,12 +65,29 @@ body
         .search-list
           width search-width - 15px
           margin auto
-          background blue
+          // background blue
 
           li
             padding 0.4rem
-            transition padding 0.1s
-            &:nth-child(even)
-              background green
+            border 1px solid rgba(#ff81002b)
+            transition all 0.1s
+            background rgba(#fffefee6)
             &:hover
-              padding @padding*2
+              border 1px solid rgba(#ff810066)
+              letter-spacing 1px
+
+    .recommend-wrapper
+      height round(maxheight/3*2)
+      position relative
+      .btn
+        position absolute
+        &.btn-left
+          left 0
+          top 50%
+        &.btn-right
+          right 0
+          top 50%
+      .hero-img
+        height 100%
+        object-fit cover
+        width 100%
