--- a/frontend/owcompare/src/css/style.styl
+++ b/frontend/owcompare/src/css/style.styl
@@ -66,6 +66,8 @@ body
           width search-width - 15px
           margin auto
           // background blue
+          &.hidden
+            display: none
 
           li
             padding 0.4rem
