--- a/frontend/owcompare/src/css/style.css
+++ b/frontend/owcompare/src/css/style.css
@@ -158,6 +158,7 @@ body main .search-wrapper .search .search-list.hidden {
   display: none;
 }
 body main .search-wrapper .search .search-list .search-list-item {
+  position: relative;
   padding: 0.4rem;
   border: 1px solid rgba(255,129,0,0.169);
   -webkit-transition: all 0.1s;
@@ -170,6 +171,14 @@ body main .search-wrapper .search .search-list .search-list-item:hover {
 }
 body main .search-wrapper .search .search-list .search-list-item.active {
   background: rgba(243,241,212,0.9);
+}
+body main .search-wrapper .search .search-list .search-list-item.active:after {
+  position: absolute;
+  right: 25px;
+  content: "select ⏎";
+  color: rgba(111,111,111,0.8);
+  font-size: 0.7rem;
+  line-height: 1rem;
 }
 body main .recommend-wrapper {
   height: 67vh;
