--- a/frontend/owcompare/src/css/style.styl
+++ b/frontend/owcompare/src/css/style.styl
@@ -64,6 +64,7 @@ body
             display none
 
           .search-list-item
+            position relative
             padding 0.4rem
             border 1px solid rgba(#ff81002b)
             transition all 0.1s
@@ -73,6 +74,14 @@ body
               letter-spacing 1px
             &.active
               background rgba(243, 241, 212, 0.9)
+              &:after
+                position absolute
+                right 25px
+                content "select ⏎"
+                //TODO: MAKE THIS ORANGE LATER
+                color rgba(111,111,111,0.8)
+                font-size 0.7rem
+                line-height 1rem
 
     .recommend-wrapper
       height round(maxheight/3*2)
