--- a/frontend/owcompare/src/css/style.styl
+++ b/frontend/owcompare/src/css/style.styl
@@ -60,6 +60,9 @@ body
         .search-list
           width search-width - 15px
           margin auto
+          // height 15rem
+          // overflow auto
+          border-bottom 1px solid rgba(#ff81002b)
           &.hidden
             display none
 
