Search results scrollable with arrow keys

--- a/frontend/owcompare/src/css/style.styl
+++ b/frontend/owcompare/src/css/style.styl
@@ -60,15 +60,14 @@ body
         .search-list
           width search-width - 15px
           margin auto
-          // height 15rem
+          max-height 15rem
           // overflow auto
-          border-bottom 1px solid rgba(#ff81002b)
           &.hidden
             display none
 
           .search-list-item
             position relative
-            padding 0.4rem
+            padding 6px
             border 1px solid rgba(#ff81002b)
             transition all 0.1s
             background rgba(255,254,254,0.9)
