--- a/frontend/owcompare/src/css/style.css
+++ b/frontend/owcompare/src/css/style.css
@@ -153,14 +153,14 @@ body main .search-wrapper .search .search-bar {
 body main .search-wrapper .search .search-list {
   width: 335px;
   margin: auto;
-  border-bottom: 1px solid rgba(255,129,0,0.169);
+  max-height: 15rem;
 }
 body main .search-wrapper .search .search-list.hidden {
   display: none;
 }
 body main .search-wrapper .search .search-list .search-list-item {
   position: relative;
-  padding: 0.4rem;
+  padding: 6px;
   border: 1px solid rgba(255,129,0,0.169);
   -webkit-transition: all 0.1s;
   transition: all 0.1s;
