--- a/frontend/owcompare/src/css/style.css
+++ b/frontend/owcompare/src/css/style.css
@@ -89,6 +89,10 @@ td {
 a img {
   border: none;
 }
+html {
+  margin: 0;
+  padding: 0;
+}
 body {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -185,20 +189,38 @@ body main .recommend-wrapper {
   height: 67vh;
   position: relative;
 }
-body main .recommend-wrapper .btn {
+body main .recommend-wrapper .recommend-buttons {
+  height: 100%;
+  width: 100%;
   position: absolute;
+  top: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+body main .recommend-wrapper .btn {
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  background: none;
+  border: none;
 }
 body main .recommend-wrapper .btn.btn-left {
-  left: 0;
-  top: 50%;
+  text-align: left;
+}
+body main .recommend-wrapper .btn.btn-left:hover {
+  font-size: 2rem;
 }
 body main .recommend-wrapper .btn.btn-right {
-  right: 0;
-  top: 50%;
+  text-align: right;
+}
+body main .recommend-wrapper .btn.btn-right:hover {
+  font-size: 2rem;
 }
 body main .recommend-wrapper .hero-img {
-  height: 100%;
+  display: block;
   -o-object-fit: cover;
      object-fit: cover;
+  height: 100%;
   width: 100%;
 }
