--- a/frontend/owcompare/src/css/style.styl
+++ b/frontend/owcompare/src/css/style.styl
@@ -74,7 +74,7 @@ body
 
           .search-list-item
             position relative
-            padding 6px
+            padding 6px 0
             border 1px solid rgba(#ff81002b)
             transition all 0.1s
             background rgba(255,254,254,0.9)
@@ -107,10 +107,12 @@ body
         border none
         &.btn-left
           text-align left
+          margin-right 20%
           &:hover
             font-size 2rem
         &.btn-right
           text-align right
+          margin-left 20%
           &:hover
             font-size 2rem
       .hero-img
