--- a/frontend/owcompare/src/css/style.styl
+++ b/frontend/owcompare/src/css/style.styl
@@ -73,11 +73,14 @@ body
             display none
 
           .search-list-item
+            line-height 16px
+            display block
             position relative
             padding 6px 0
             border 1px solid rgba(#ff81002b)
             transition all 0.1s
             background rgba(255,254,254,0.9)
+            width 100%
             &:hover
               border 1px solid rgba(#ff810066)
               letter-spacing 1px
